Updated links in armor_texts and weapon_texts .html files. Added more content to DOTSamurai_missions.txt.

--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -348,7 +348,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Onmyo Mage</a>
 					</td>
 					<td>
-						<span>Any mission that contains a Onmyo Mage</span>
+						<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Onmyo Mage</a></span>
 					</td>
 				</tr>
 
@@ -395,7 +395,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a>
 					</td>
 					<td>
-						<span>Any mission that contains a Mitsume Yazura</span>
+						<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a></span>
 					</td>
 				</tr>
 
@@ -453,7 +453,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a>
 					</td>
 					<td>
-						<span>Any mission that contains a Mitsume Yazura</span>
+						<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a></span>
 					</td>
 				</tr>
 
@@ -513,7 +513,7 @@
 						<span>-</span>
 					</td>
 					<td>
-                        <span>Complete all missions (Dream Of The Strong) (Excludes online [Blue Colored] missions)</span>
+                        <span>Complete all missions (Dream Of The Strong) (Excludes Online Missions [Blue Colored])</span>
 					</td>
 				</tr>
 
@@ -548,7 +548,7 @@
 						<span>-</span>
 					</td>
 					<td>
-                        <span>Complete all missions (Dream Of The Nioh) (Excludes online [Blue Colored] missions)</span>
+                        <span>Complete all missions (Dream Of The Nioh) (Excludes Online Missions [Blue Colored])</span>
 					</td>
 				</tr>
 
@@ -559,7 +559,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a>
 					</td>
 					<td>
-						<span>Any mission that contains a Mitsume Yazura</span>
+						<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a></span>
 					</td>
 				</tr>
 
@@ -604,7 +604,7 @@
 						<span>-</span>
 					</td>
 					<td>
-                        <span>Complete all missions (Dream Of The Demon) (Excludes online [Blue Colored] missions)</span>
+                        <span>Complete all missions (Dream Of The Demon) (Excludes Online Missions [Blue Colored])</span>
 					</td>
 				</tr>
 
@@ -629,7 +629,7 @@
 						<span>-</span>
 					</td>
 					<td>
-                        <span>Complete all missions (Dream Of The Wise) (Excludes online [Blue Colored] missions)</span>
+                        <span>Complete all missions (Dream Of The Wise) (Excludes Online Missions [Blue Colored])</span>
 					</td>
 				</tr>
 
@@ -651,7 +651,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Karasu Tengu</a>
 					</td>
 					<td>
-						<span>Any mission that contains a Karasu Tengu</span>
+						<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Karasu Tengu</a></span>
 					</td>
 				</tr>
 
@@ -673,7 +673,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a>
 					</td>
 					<td>
-						<span>Any mission that contains a Mitsume Yazura</span>
+						<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a></span>
 					</td>
 				</tr>
 
@@ -696,7 +696,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Onmyo Mage</a>
 					</td>
 					<td>
-						<span>Any mission that contains a Onmyo Mage</span>
+						<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Onmyo Mage</a></span>
 					</td>
 				</tr>
 
@@ -707,7 +707,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Nure-Onna</a>
 					</td>
 					<td>
-						<span>Any mission that contains a Nure-Onna</span>
+						<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Nure-Onna</a></span>
 					</td>
 				</tr>
             </table>
@@ -1478,7 +1478,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Sohaya Warrior</a>
 						</td>
 						<td>
-							<span>Any mission that contains a Sohaya Warrior</span>
+							<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Sohaya Warrior</a></span>
 						</td>
 					</tr>
 	
@@ -1500,7 +1500,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Sohaya Warrior</a>
 						</td>
 						<td>
-							<span>Any mission that contains a Sohaya Warrior</span>
+							<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Sohaya Warrior</a></span>
 						</td>
 					</tr>
 	
