--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -994,7 +994,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Namahage</a>
 						</td>
 						<td>
-							<span>Any mission that contains a Namahage</span>
+							<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Namahage</a></span>
 						</td>
 					</tr>
 
@@ -1381,7 +1381,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Koroka</a>
 						</td>
 						<td>
-							<span>Any mission that contains a Koroka</span>
+							<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Koroka</a></span>
 						</td>
 					</tr>
 
@@ -1724,7 +1724,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Yoki</a> (Axe)
 					</td>
 					<td>
-						<span>Any mission that has a Yoki (that wields an Axe)</span>
+						<span>Any mission that has a <a class="text-sky-400 hover:text-sky-600" href="">Yoki</a> (that wields an Axe)</span>
 					</td>
 				</tr>
 
@@ -1791,7 +1791,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Ippon-Datara</a> (Hammer)
 					</td>
 					<td>
-						<span>Any mission that has an Ippon-Datara (that wields a Hammer)</span>
+						<span>Any mission that has an <a class="text-sky-400 hover:text-sky-600" href="">Ippon-Datara</a> (that wields a Hammer)</span>
 					</td>
 				</tr>
 
@@ -2147,7 +2147,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Nure-Onna</a>
 						</td>
 						<td>
-							<span>Any mission that contains a Nure-Onna</span> 
+							<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Nure-Onna</a></span> 
 						</td>
 					</tr>
 
@@ -2158,7 +2158,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Namahage</a>
 						</td>
 						<td>
-							<span>Any mission that contains a Namahage</span>
+							<span>Any mission that contains a <a class="text-sky-400 hover:text-sky-600" href="">Namahage</a></span>
 						</td>
 					</tr>
 
@@ -2222,7 +2222,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Ippon-Datara</a> (Odachi)
 						</td>
 						<td>
-							<span>Any mission that has an Ippon-Datara (that wields an Odachi)</span>
+							<span>Any mission that has an <a class="text-sky-400 hover:text-sky-600" href="">Ippon-Datara</a> (that wields an Odachi)</span>
 						</td>
 					</tr>
 
