Updated colors for the links in equipment_index, tools_index, and world_index .html files.

--- a/nioh2/tools/tools_index.html
+++ b/nioh2/tools/tools_index.html
@@ -250,8 +250,8 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/smithing_texts_index.html">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Smithing Texts</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Smithing Texts</span>
                 </a>
 
                 <!-- ==========
@@ -259,8 +259,8 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/temper_tables/temper_tables_index.html">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Temper Tables</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Temper Tables</span>
                 </a>
 
                 <!-- ==========
@@ -268,8 +268,8 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Blacksmith</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Blacksmith</span>
                 </a>
 
                 <!-- ==========
@@ -277,8 +277,8 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Stone of Penance</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Stone of Penance</span>
                 </a>
 
                 <!-- ==========
@@ -286,8 +286,8 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Farming Resources</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Farming Resources</span>
                 </a>
 
                 <!-- ==========
@@ -295,8 +295,8 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Achievements</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Achievements</span>
                 </a>
 
                 <!-- ==========
@@ -304,8 +304,8 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Builds</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Builds</span>
                 </a>
             </div>
         </div>
