Updated the color for the buttons across various .html files.

--- a/nioh2/equipment/soul_cores/cores_index.html
+++ b/nioh2/equipment/soul_cores/cores_index.html
@@ -250,8 +250,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/cores_list.html">
                     
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Soul Core List</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Soul Core List</span>
                 </a>
 
                 <!-- ==========
@@ -260,8 +260,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Soul Core Mechanics</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Soul Core Mechanics</span>
                 </a>
 
                 <!-- ==========
@@ -270,8 +270,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/cores_attributes.html">
 
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Attribute Conflict Table</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Attribute Conflict Table</span>
                 </a>
 
                 <!-- ==========
@@ -280,8 +280,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/farming_cores.html">
 
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Farming Ethereal Soul Cores</span>
+                    <span class="mask w-full p-2 justify-self-end text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Farming Ethereal Soul Cores</span>
                 </a>
             </div>
         </div>
