--- a/nioh2/tools/smithing_texts/smithing_texts_index.html
+++ b/nioh2/tools/smithing_texts/smithing_texts_index.html
@@ -251,8 +251,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/hidden_skills.html">
                     <img class="h-[75px] w-auto" src="./img/hidden_skill_icon.png" alt="Hidden Skills Skill Tree icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Hidden Skills</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Hidden Skills</span>
                 </a>
 
                 <!-- ==========
@@ -261,8 +261,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/weapon_texts.html">
                     <img class="my-auto" src="./img/weapons_icon.png" alt="Weapons icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Weapon Smithing Texts</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Weapon Smithing Texts</span>
                 </a>
 
                 <!-- ==========
@@ -271,8 +271,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/armor_texts.html">
                     <img class="my-auto" src="./img/armor_icon.png" alt="Armor icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Armor Smithing Texts</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Armor Smithing Texts</span>
                 </a>
 
                 <!-- ==========
@@ -281,8 +281,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/misc_texts.html">
                     <img class="my-auto" src="./img/misc_smithing_icon.png" alt="Blacksmith Hammer icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Misc Smithing Texts</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Misc Smithing Texts</span>
                 </a>
 
                 <!-- ==========
@@ -291,8 +291,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <img class="h-[75px] w-auto" src="./img/missions_logo.png" alt="Main Mission icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Mission Progression Unlocks</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Mission Progression Unlocks</span>
                 </a>
             </div>
         </div>
