--- a/nioh2/tools/temper_tables/temper_tables_index.html
+++ b/nioh2/tools/temper_tables/temper_tables_index.html
@@ -251,8 +251,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="./weapon_tables.html">
                     <img class="" src="./img/weapons_icon.png" alt="Weapons icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Melee Temper Table</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Melee Temper Table</span>
                 </a>
 
                 <!-- ==========
@@ -261,8 +261,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="./ranged_tables.html">
                     <img class="" src="./img/ranged_weapons_icon.png" alt="Ranged Weapons icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Ranged Temper Table</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Ranged Temper Table</span>
                 </a>
 
                 <!-- ==========
@@ -271,8 +271,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="./accessories_tables.html">
                     <img class="" src="./img/accessories_icon.png" alt="Accessories icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Accessories Temper Table</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Accessories Temper Table</span>
                 </a>
 
                 <!-- ==========
@@ -281,8 +281,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="./helmet_tables.html">
                     <img class="" src="./img/helmet_icon.png" alt="Helmet icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Helmet Temper Table</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Helmet Temper Table</span>
                 </a>
 
                 <!-- ==========
@@ -291,8 +291,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="./torso_tables.html">
                     <img class="" src="./img/torso_icon.png" alt="Torso icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Torso Temper Table</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Torso Temper Table</span>
                 </a>
 
                 <!-- ==========
@@ -301,8 +301,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="./gloves_tables.html">
                     <img class="" src="./img/gloves_icon.png" alt="Gloves icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Gloves Temper Table</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Gloves Temper Table</span>
                 </a>
 
                 <!-- ==========
@@ -311,8 +311,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="./waist_tables.html">
                     <img class="" src="./img/waist_icon.png" alt="Waist icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Waist Temper Table</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Waist Temper Table</span>
                 </a>
 
                 <!-- ==========
@@ -321,8 +321,8 @@
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="./boots_tables.html">
                     <img class="" src="./img/boots_icon.png" alt="Boots icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Boots Temper Table</span>
+                    <span class="mask w-full p-2 text-center text-gray-200 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-400 group-hover:bg-light-red">Boots Temper Table</span>
                 </a>
             </div>
         </div>
