Updated content in cores_attributes .html and .txt files.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -1611,7 +1611,7 @@
                     <td>Yes</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Kodama Sensor</td>
+                    <td><span class="text-uncommon-text-color">Kodama Sensor</span></td>
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
