Updated content in nioh2.html. Updated the online logo for nioh2.html Added nioh3.html. Added the nioh3_logo.png. Updated tailwind.config.js file for the nioh 3 fonts.

--- a/nioh3/nioh3.html
+++ b/nioh3/nioh3.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nioh 2 Wiki</title>
+    <title>Nioh 3 Wiki</title>
     <!-- ========== ========== ==========
-    Google Fonts (Asul)
+    Google Fonts (Noto Serif) - Nioh 3
     ========== ========== ========== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Asul&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
 
     <!-- ========== ========== ==========
     FlowBite CSS
@@ -33,7 +33,7 @@
     npx tailwindcss -i ./css/input.css -o ./css/output.css --watch
     ========== ========== ========== -->
 </head>
-<body class="bg-fixed lg:bg-cover font-asul">
+<body class="site-index font-noto">
     <!-- 
     ========== ========== ========== ========== ==========
     Header
@@ -56,8 +56,8 @@
                     </svg>
                 </a>
 
-                <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
+                <!-- TODO Nioh 3 Logo -->
+                <!-- <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a> -->
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -228,7 +228,7 @@
     Hero Section
     ========== ========== ========== ========== ========== -->
     <section class="mt-20 flex flex-col items-center justify-center gap-4">
-        <img src="./img/nioh2_logo_large.png" alt="">
+        <img src="./img/nioh3_logo_large.png" alt="">
         <h1 class="text-white text-6xl">Wiki</h1>
     </section>
 
@@ -236,7 +236,7 @@
     <!-- ========== ========== ========== ========== ==========
     Card Section
     ========== ========== ========== ========== ========== -->
-    <section class="w-full mx-auto mt-12 mb-32 px-6 gap-4
+    <section class=" w-full mx-auto mt-12 mb-32 px-6 gap-4
         md:w-11/12 md:grid md:grid-cols-2
         2xl:w-9/12 2xl:grid 2xl:grid-cols-3">
 
@@ -251,7 +251,7 @@
         <!-- ========== ==========
         Basics (Main Card 1)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[760px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[707px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -296,7 +296,7 @@
         <!-- ========== ==========
         Combat (Main Card 2)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[760px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[707px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -313,11 +313,11 @@
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="">Stances</a>
+                    href="">Samurai / Ninja Styles</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="">Ki Pulse</a>
+                    href="">Stances / Ki Pulse</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
@@ -325,7 +325,7 @@
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="">Yokai Shift & Burst Counters</a>
+                    href="">Living Artifact</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
@@ -333,7 +333,7 @@
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="">Dark Realm / Status Effects</a>
+                    href="">Dark Realm / Crucible / Status Effects</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
@@ -345,7 +345,7 @@
         <!-- ========== ==========
         Equipment (Main Card 3)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[760px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[707px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -378,11 +378,7 @@
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="">Onmyo Magic</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/cores_index.html">Soul Cores</a>
+                    href="">Soul Cores / Onmyo Magic</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
@@ -406,7 +402,7 @@
         <!-- ========== ==========
         World (Main Card 4)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[760px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[707px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -442,7 +438,7 @@
         <!-- ========== ==========
         Tools & Resources (Main Card 5)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[760px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[707px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -450,7 +446,7 @@
                 href="https://liukang1080.github.io/gamewiki/nioh2/tools/tools_index.html">
 
                 <img src="./img/tools_icon.png" alt="">
-                <span class="text-2xl text-slate-300 group-hover:text-yellow-400">Tools & Resources</span>
+                <span class="  text-2xl text-slate-300 group-hover:text-yellow-400">Tools & Resources</span>
             </a>
 
             <!-- ========== 
@@ -484,7 +480,7 @@
         <!-- ========== ==========
         Online (Main Card 6)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[760px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[707px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -525,7 +521,7 @@
         <div class="flex flex-col items-center gap-1 md:gap-3
             lg:flex-row">
 
-            <a class="text-xl text-slate-300 hover:text-sky-400" href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html">Nioh 2 Wiki</a>
+            <a class="text-xl text-slate-300 hover:text-sky-400" href="https://liukang1080.github.io/gamewiki/nioh3/nioh3.html">Nioh 3 Wiki</a>
             <a class="text-slate-300 hover:text-sky-400" href="https://github.com/LiuKang1080">Development: LiuKang1080</a>
         </div>
 
@@ -549,14 +545,14 @@
 
     <!-- Background JS -->
     <!-- <script src="https://liukang1080.github.io/gamewiki/nioh2/js/nioh2_background_image.js" type="text/javascript" defer></script> -->
-    <script src="./js/nioh2_background_image.js" type="text/javascript" defer></script>
+    <!-- <script src="./js/nioh2_background_image.js" type="text/javascript" defer></script> -->
 
 </body>
 </html>
 
 <!-- TODO -->
 <!--
-    - 
+    - Fix the feature for random background image generator for Nioh 3 when the game fully releases.
 -->
 
 
